--- a/src/styles/components/BranchDetails.scss
+++ b/src/styles/components/BranchDetails.scss
@@ -9,7 +9,8 @@
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     min-height: 100vh;
     height: 100%;
-    padding-top: 15%;
+    padding-top: 13%;
+    padding-bottom: 2%;
     justify-content: space-evenly;
     @media (max-width: 600px) {
       padding-top: 25%;
@@ -45,7 +46,7 @@
       text-align: justify;
       line-height: 1.5;
       padding: 0 1rem;
-      width: 70%;
+      width: 100%;
       align-self: center;
       text-align: center;
       @media (max-width: 600px) {
@@ -71,7 +72,7 @@
       padding: 0.5rem 1rem;
       border-radius: 16px;
       text-transform: capitalize;
-  
+      margin-top: 3%;
       &--active {
         color: #fff;
         background-color: var(--primary-color);
@@ -99,8 +100,20 @@
     &__actions {
       display: flex;
       gap: 1rem;
-  
+      margin-top: 10px;
     }
+    &__status-toggle{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .stateChange{
+        color: var(--primary-color);
+        font-size: 0.7rem;  
+      }
+    }
+    // & .swal2-popup{
+    //   width: 200px !important;
+    // }
   }
   .textInfo{
     display: flex;
@@ -120,7 +133,8 @@
     height: 100%;
     @media (max-width: 600px) {
       width: 95%;
-      overflow: hidden;
+      // overflow: hidden;
+      padding-bottom: 100px;
       margin-bottom: 30px;
     }
   }
@@ -180,23 +194,23 @@
       padding: 10px;
       width: 90%;
     }
-  
+    
     .swal2-title {
       font-size: 1.2rem;
     }
-  
+    
     .swal2-html-container{
       padding: 0px;
       font-size: 0.9rem;
       width: 100%;
     }
-  
+    
     .my-confirm-button-class,
     .my-cancel-button-class {
       padding: 8px 16px;
       font-size: 0.9rem;
     }
-     .swal2-input{
+    .swal2-input{
       width: 100% !important; 
       font-size: 0.9rem;
     }
@@ -205,7 +219,7 @@
       font-size: 0.9rem;
     }
   }
-
+  
   .back-button {
     display: flex;
     align-items: center;
@@ -229,26 +243,26 @@
       border-radius: 50%;
       background-color: transparent;
     }
-
+    
     .back-icon {
       font-size: 1.5rem;
       @media (max-width: 600px) {
         font-size: 1rem;
-     }
+      }
     }
-
+    
     @media (max-width: 600px) {
-     background-color: #e2e2e2f4;
-     font-size: 1rem;
+      background-color: #e2e2e2f4;
+      font-size: 1rem;
+    }
   }
-}
-.swal2-imageBranch{
-  margin-top: 5%;
-  margin-bottom: 5%;
-}
-
-.branch-details__map {
-  width: 100%;
-  height: 300px; 
-  margin-top: 20px;
-}
+  .swal2-imageBranch{
+    margin-top: 5%;
+    margin-bottom: 5%;
+  }
+  
+  .branch-details__map {
+    width: 100%;
+    height: 300px; 
+    margin-top: 20px;
+  }
