--- a/src/styles/pages/TouristPointDetail.scss
+++ b/src/styles/pages/TouristPointDetail.scss
@@ -1,25 +1,46 @@
   .tourist-point-detail {
-    // height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    height: 90%;
+    margin-left: 6%;
     padding-top: 10%;
     width: 100vw;
     @media (max-width: 768px) {
+      // flex-direction: column;
       width: 95%;
-      margin-left: 5%;
+      padding-top: 20%;
+      margin-left: 7%;
       padding-bottom: 2%;
+     }
+     .detail-content{
+      flex: 1 1 42%;
+      display: flex;
+      flex-direction: column;
+      @media (max-width: 768px) {
+        flex: 1 1 90%;
+        padding-top: 5%;
+        margin-left: 3%;
+        padding-bottom: 2%;
+       }
      }
     // background-image: url(../../assets/images/fondo-poli.svg);
     .detail-card {
         padding: 6px;
-        margin: auto;
         display: flex;
         max-width: 700px;
         width: 100%;
-        height: 95%;
         flex-direction: column;
         justify-content: space-between;
+        @media (max-width: 768px) {
+          width: 95%;
+         
+         }
+        
       .detail-image {
-        width: 100%; 
-        max-height: 300px;
+        width: fit-content; 
+        align-self: center;
+        max-height: 220px;
         margin-bottom: 16px;
         border-radius: 10px;
       }
@@ -46,10 +67,11 @@
     display: flex;
     height: 100px;
     gap: 10px;
-
+    
     & .thumbnail-wrapper-list{
-        height: 100px;
-        & img{
+      height: 100px;
+      & img{
+            max-width: 100px;
             height: 70px;
             border-radius: 10px;
             &:hover{
@@ -107,10 +129,7 @@
         }
       }
     }
-    .descriptionTOur{
-      margin-top: 3%;
-      font-size: 0.9rem;
-    }
+   
 
     
   .back-button {
@@ -147,9 +166,20 @@
     @media (max-width: 600px) {
      background-color: #e2e2e2f4;
      font-size: 1rem;
+     left: 15%;
   }
 }
 
 .css-1oqqzyl-MuiContainer-root {
   max-width: 1500px;
+}
+
+.descriptionTour{
+  margin-top: 2%;
+  margin-bottom: 1%;
+  font-size: 0.8rem;
+}
+
+.map-container-view{
+  padding: 2%;
 }
