--- a/src/styles/components/EditBranchModal.scss
+++ b/src/styles/components/EditBranchModal.scss
@@ -118,7 +118,7 @@
     position: relative;
     display: flex;
     justify-content: center;
-    height: 45%;
+    // height: 45%;
     cursor: pointer;
     align-items: center;
     border-radius: 10px;
