--- a/src/styles/pages/CommentModeration.scss
+++ b/src/styles/pages/CommentModeration.scss
@@ -1,4 +1,6 @@
     .comment-moderation {
+      display: flex;
+      flex-direction: column;
         max-width: 1200px;
         margin: 0 auto;
         padding: 20px;
@@ -151,11 +153,11 @@
         }
         }
     
-        p {
-        text-align: center;
-        font-size: 16px;
-        color: #777;
-        }
+        // p {
+        // text-align: center;
+        // font-size: 16px;
+        // color: #777;
+        // }
     }
     
     .modal {
@@ -170,7 +172,7 @@
         justify-content: center;
         z-index: 1000;
       
-        .modal-content {
+        .modal-content-branch{
             position: relative;
             display: flex;
             flex-direction: column;
@@ -180,7 +182,7 @@
           border-radius: 8px;
           width: 90%;
           max-width: 500px;
-          padding: 20px;
+          padding: 30px;
           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
           animation: slideIn 0.3s ease;
       
@@ -201,7 +203,7 @@
             }
           }
       
-          .modal-actions {
+          .modal-actions-branch {
             display: flex;
             justify-content: space-evenly;
             align-self: center;
@@ -268,5 +270,24 @@
       }
 
 .notcomment{
-    margin-top: 5%;
+  background-color: #f2f2f2;
+  text-align: center;
+  padding: 18px 30px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-top: 5%;
+  color: var(--primary-color);
+  max-width: 480px;
+  align-self: center;
+  border-radius: 8px;
+}
+.notType{
+  background-color: #f2f2f2;
+  border-radius: 8px;
+  text-align: center;
+  padding: 18px 30px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-top: 5%;
+  color: var(--primary-color);
+  max-width: 300px;
+  align-self: center;
 }
