--- a/src/styles/pages/_AllPromotions.scss
+++ b/src/styles/pages/_AllPromotions.scss
@@ -22,13 +22,15 @@
     }
 .items-per-page{
     font-size: 0.8rem;
+    color: #027A8C;
     select {
         max-width: 150px;
         max-height: 30px;
         padding: 8px 12px;
         border: none;
         border-radius: 5px;
-        background-color: #a8e9f317;
+        color: #027A8C;
+        background-color: transparent;
         font-size: 0.7rem;
         transition: border-color 0.3s ease;
         margin-left: 20px;
@@ -313,39 +315,6 @@
         gap: 5px;
         margin-left: 0px;
     }
-    // & button {
-    //     // background-color: #f1f1f1;
-    //     border: 1px solid #ccc;
-    //     padding: 8px 15px;
-    //     margin: 0 5px;
-    //     border-radius: 10px;
-    //     cursor: pointer;
-    //     transition: background-color 0.3s ease, color 0.3s ease;
-    //     font-size: 1rem;
-    //     color: #333;
-    //     outline: none;
-    //     @media (max-width: 480px) {
-    //         padding: 4px 8px;
-    //         border-radius: 5px;
-    //     }
-    //     &:hover {
-    //         background-color: #ddd;
-    //         // color: #000;
-    //     }
-
-    //     &.active {
-    //         background-color: var(--primary-color-active);
-    //         color: #fff;
-    //         border: none;
-    //         pointer-events: none;
-    //     }
-
-    //     &:disabled {
-    //         background-color: #e9ecef;
-    //         color: #6c757d;
-    //         cursor: not-allowed;
-    //     }
-    // }
 }
 .inputnumber{
     max-width: 180px;
