--- a/src/styles/pages/_branchesTable.scss
+++ b/src/styles/pages/_branchesTable.scss
@@ -14,9 +14,8 @@
     width: 100%;
     overflow: hidden;
     -webkit-overflow-scrolling: touch;
-    @media (max-width: 600px) {
-      padding-left: 8%;
-    }
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-image: url(../../assets/images/fondo-poli.svg);
     @media (max-width: 600px) {
         padding-top: 20%;
         padding-left: 11%;
@@ -28,25 +27,27 @@
     width: 90%;
     border-collapse: collapse; 
     background-color: #fff;  
-    // border-radius: 8px;
+    border-radius: 8px;
     overflow: hidden; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     
     th, td {
       padding: 5px 10px;
       text-align: left;
       font-size: 1rem;
       color: var(--primary-color);
+      border-bottom: 1px solid #ddd;
       @media (max-width: 600px) {
         font-size: 0.93rem;
       }
     }
     
     th, td {
-            padding: 5px;
+            padding: 8px;
             text-align: left;
             font-size: 1rem;
             height: 40px;
-            border: 1px solid #ddd;
+            // border: 1px solid #ddd;
             background-color: #fff;
     }
     tr{
@@ -60,19 +61,29 @@
       background-color:#00798c17; 
     }
     th {
-      background-color: var(--primary-color);
+      color: var(--secundary-color);
+      font-size: 0.9rem;
       font-weight: 600;
-      padding: 10px;
-      color: #fff;
+      padding: 12px 15px;
   }
   }
+  .image-column {
+    text-align: center;
+    vertical-align: middle; 
   
-  .branch-image {
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
-    border-radius: 5px;
+    .branch-image {
+      max-width: 60px;
+      max-height: 80px;
+      object-fit: cover;
+      border-radius: 5px; 
+    }
   }
+  // .branch-image {
+  //   width: 50px;
+  //   height: 50px;
+  //   object-fit: cover;
+  //   border-radius: 5px;
+  // }
   
   .edit-link {
     color: var(--primary-color);
